# modul_anerkennung

./: README.md  environment.yml  main.py  pyproject.toml
modul_anerkennung/: config.py  gui.py  llm_interface.py  rag_manager.py  rag_manager_light.py  similarity_checker.py
notebooks/: colab_demo.ipynb
